--- a/.github/deploy-to-aci.yml
+++ b/.github/deploy-to-aci.yml
@@ -20,9 +20,9 @@ jobs:
 
     - name: Build and push Docker image to Azure Container Registry
       run: |
-        docker build -t my-dotnet-app .
-        docker tag my-dotnet-app <acr-name>.azurecr.io/my-dotnet-app:latest
-        docker push <acr-name>.azurecr.io/my-dotnet-app:latest
+        docker build -t my-dotnet-app2 .
+        docker tag my-dotnet-app2 <acr-name>.azurecr.io/my-dotnet-app2:latest
+        docker push <acr-name>.azurecr.io/my-dotnet-app2:latest
 
     - name: Deploy to Azure Container Instances
       uses: azure/aci-deploy@v1
