--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Login to ACR
+      run: |
+       az acr login –-name luciantestregistry
 
     - name: Build and push Docker image to Azure Container Registry
       run: |
