--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,6 @@ jobs:
         container-name: my-dotnet-app2
         os-type: Windows
         ports: 80
+        location: westeurope
       env:
         AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
