--- a/dissertation_prosumer/dissertation_prosumer.csproj
+++ b/dissertation_prosumer/dissertation_prosumer.csproj
@@ -49,7 +49,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProsumerAgent.cs" />
+    <Compile Include="ProsumerBatteryAgent.cs" />
+    <Compile Include="ProsumerLoadAgent.cs" />
+    <Compile Include="ProsumerGeneratorAgent.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
